[package]
authors = ["Robin <robinsyihab@gmail.com>"]
edition = "2018"
name = "vaghar"
version = "0.1.0"

[dependencies]
anyhow = "1.0.66"
bitcoin = "^0.26.0"
clap = {version = "4.0.13", features = ["derive"]}
hex = "^0.4.3"
permutator = "0.4"
rand = "0.8.5"
rayon = "1.6.0"
secp256k1 = "^0.20.2"
secp256k1_17 = {version = "^0.17.2", package = "secp256k1"}
serde = {version = "1.0", features = ["derive"]}
tiny-bip39 = "1.0"
toml = "0.5"
wagyu-ethereum = "^0.6.3"
wagyu-model = "^0.6.3"
